--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -109,6 +109,7 @@ jobs:
               id: bump
               shell: bash
               run: |
+                set -x
                 current_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')
                 # Extract parts without IFS or read
                 IFS='.'
