--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -19,40 +19,38 @@ concurrency:
 
 jobs:
 
-    build-binaries:
-      strategy:
-        matrix:
-          binary:
-            - architecture: x86_64-linux
-              runner: self-hosted-hoprnet-big
-            - architecture: aarch64-linux
-              runner: self-hosted-hoprnet-big
-            - architecture: armv7l-linux
-              runner: self-hosted-hoprnet-big
-            - architecture: aarch64-darwin
-              runner: macos-14
-            - architecture: x86_64-darwin
-              runner: macos-13
-      name: Binary ${{ matrix.binary.architecture }}
-      uses: ./.github/workflows/build-binaries.yaml
-      with:
-        branch: main
-        runner: ${{ matrix.binary.runner }}
-        architecture: ${{ matrix.binary.architecture }}
-        version_type: 'release'
-      secrets: inherit
+    # build-binaries:
+    #   strategy:
+    #     matrix:
+    #       binary:
+    #         - architecture: x86_64-linux
+    #           runner: self-hosted-hoprnet-big
+    #         - architecture: aarch64-linux
+    #           runner: self-hosted-hoprnet-big
+    #         - architecture: armv7l-linux
+    #           runner: self-hosted-hoprnet-big
+    #         - architecture: aarch64-darwin
+    #           runner: macos-14
+    #         - architecture: x86_64-darwin
+    #           runner: macos-13
+    #   name: Binary ${{ matrix.binary.architecture }}
+    #   uses: ./.github/workflows/build-binaries.yaml
+    #   with:
+    #     branch: main
+    #     runner: ${{ matrix.binary.runner }}
+    #     architecture: ${{ matrix.binary.architecture }}
+    #     version_type: 'release'
+    #   secrets: inherit
 
     release:
         name: Close release
-        needs: 
-          - build-binaries
+        # needs: 
+        #   - build-binaries
         runs-on: self-hosted-hoprnet-small
 
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4
-              with:
-                  token: ${{ secrets.GH_RUNNER_TOKEN }}
 
             - name: Setup GCP
               id: gcp
