Fixing close release pipeline (#18)
* Start debugging

* use 3 binaries

* Debugging

* Testing

* adding debug

* Fixing download

* change

* Unify package

* Unify package binaries

* Adding token

* debugging

* debug

* more debug

* one more testing

* fixing

* step 1

* Testing more

* sleep

* sleep true

* print token

* add permissions

* Debugging bump

* more debug

* debugging

* debug2

* declare them as integer

* again

* bash

* parse int

* Parse differently as int

* use variable substitution

* Use differently

* more debug

* debugging

* Change read

* Uncomment

* Removing token

* Adding all binaries

* Add properties

* removing manual tag

* uncomment

--- a/.github/workflows/build-binaries.yaml
+++ b/.github/workflows/build-binaries.yaml
@@ -58,8 +58,9 @@ jobs:
         id: vars
         run: |
           declare branch architecture publish_type
-          if [[ "${{ github.event_name }}" == "pull_request" ]]; then
+          if [[ "${{ inputs.branch }}" != "" ]]; then
             echo "The workflow is triggered by other pipeline"
+            # It can be triggered by the build, merge or release pipelines
             branch=${{ inputs.branch }}
             architecture=${{ inputs.architecture }}
           else
@@ -67,17 +68,9 @@ jobs:
             branch=${{ github.ref_name }}
             architecture=${{ github.event.inputs.architecture }}
           fi
-          if [[ "${{ github.event_name}}" == "workflow_dispatch" ]]; then
-            publish_type="workflow"
-          elif [[ ${{ inputs.version_type}} != "undefined" && ${{ inputs.version_type}} != "" ]]; then
-            publish_type="workflow"
-          else
-            publish_type="artifact-registry"
-          fi
           echo "Invocation parameters:"
           echo "branch=${branch}" | tee -a $GITHUB_OUTPUT
           echo "architecture=${architecture}" | tee -a $GITHUB_OUTPUT
-          echo "publish_type=${publish_type}" | tee -a $GITHUB_OUTPUT
 
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -99,16 +92,19 @@ jobs:
           USER: runner
 
       - name: Get version
-        if: inputs.version_type != 'undefined' && inputs.version_type != ''
+        if: inputs.version_type != ''
         id: version
         run: |
           base_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')
           if [[ ${{ inputs.version_type }} == "commit" ]]; then
             echo "binary_version=${base_version}-commit.$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
+            echo "publish_type=workflow" | tee -a $GITHUB_OUTPUT
           elif [[ ${{ inputs.version_type }} == "pr" ]]; then
             echo "binary_version=${base_version}-pr.${{ github.event.pull_request.number }}" >> $GITHUB_OUTPUT
+            echo "publish_type=artifact-registry" | tee -a $GITHUB_OUTPUT
           elif [[ ${{ inputs.version_type }} == "release" ]]; then
             echo "binary_version=${base_version}" >> $GITHUB_OUTPUT
+            echo "publish_type=github" | tee -a $GITHUB_OUTPUT
           else
             echo "Invalid version type"
             exit 1
@@ -126,21 +122,21 @@ jobs:
           fi
 
       - name: Setup GCP
-        if: steps.vars.outputs.publish_type == 'artifact-registry'
+        if: steps.version.outputs.publish_type == 'artifact-registry' || steps.version.outputs.publish_type == 'github'
         uses: hoprnet/hopr-workflows/actions/setup-gcp@master
         with:
           google-credentials: ${{ secrets.GOOGLE_HOPRASSOCIATION_CREDENTIALS_REGISTRY }}
           install-sdk: 'true'
 
       - name: Publish Artifact registry
-        if: steps.vars.outputs.publish_type == 'artifact-registry'
+        if: steps.version.outputs.publish_type == 'artifact-registry' || steps.version.outputs.publish_type == 'github'
         run: |
           gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.version.outputs.binary_version }} --package=gnosis-vpn --source=binaries/gnosis-vpn-${{ steps.vars.outputs.architecture}}
-          gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.version.outputs.binary_version }} --package=gnosis-vpn-ctl --source=binaries/gnosis-vpn-ctl-${{ steps.vars.outputs.architecture}}
+          gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.version.outputs.binary_version }} --package=gnosis-vpn --source=binaries/gnosis-vpn-ctl-${{ steps.vars.outputs.architecture}}
 
 
       - name: Upload ${{ steps.vars.outputs.architecture }} binaries
-        if: steps.vars.outputs.publish_type == 'workflow'
+        if: steps.version.outputs.publish_type == 'workflow'
         uses: actions/upload-artifact@v4
         with:
           name: binary-${{ steps.vars.outputs.architecture }}
