--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -51,9 +51,6 @@ jobs:
         steps:
             - name: Checkout repository
               uses: actions/checkout@v4
-              with:
-                  ref: main # if you want to use a different branch keep in mind that the bump version step will be affected
-                  token: '${{ secrets.GH_RUNNER_TOKEN }}'
 
             - name: Setup GCP
               id: gcp
@@ -62,12 +59,24 @@ jobs:
                   google-credentials: ${{ secrets.GOOGLE_HOPRASSOCIATION_CREDENTIALS_REGISTRY }}
                   install-sdk: 'true'
 
+            - name: Install Nix
+              uses: cachix/install-nix-action@v29
+              with:
+                  github_access_token: ${{ secrets.GITHUB_TOKEN }}
+
+            - name: Use Nix Cache
+              uses: cachix/cachix-action@v15
+              with:
+                  name: gnosis-vpn-client
+                  authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
+              env:
+                  USER: runner
+
             - name: Setup environment variables
               id: environment
               run: |
                   release_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')
                   echo "release_version=${release_version}" >> $GITHUB_OUTPUT
-
 
             - name: Create Release
               uses: softprops/action-gh-release@v2
@@ -77,58 +86,63 @@ jobs:
 
             - name: Publish binaries
               run: |
-                  architectures=("aarch64-darwin" "x86_64-darwin" "aarch64-linux" "x86_64-linux" "armv7l-linux" )
+                  architectures=("aarch64-linux" "x86_64-linux" "armv7l-linux" "aarch64-darwin" "x86_64-darwin" )
                   mkdir -p binaries
                   for architecture in "${architectures[@]}"; do
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-${architecture} --destination=./binaries --local-filename=gnosis-vpn-${architecture}
                       gcloud artifacts files download --project=hoprassociation --location=europe-west3 --repository=rust-binaries gnosis-vpn:${{ steps.environment.outputs.release_version }}:gnosis-vpn-ctl-${architecture} --destination=./binaries --local-filename=gnosis-vpn-ctl-${architecture}
-                      gh release upload v${{ steps.environment.outputs.release_version }} "gnosis-vpn-${architecture}" --clobber
-                      gh release upload v${{ steps.environment.outputs.release_version }} "gnosis-vpn-ctl-${architecture}" --clobber
+                      gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-${architecture}" --clobber
+                      gh release upload v${{ steps.environment.outputs.release_version }} "$PWD/binaries/gnosis-vpn-ctl-${architecture}" --clobber
                   done
-
-            - name: Tag version in git
-              run: |
-                git tag v${{ steps.environment.outputs.release_version }} -m "Release v${{ steps.environment.outputs.release_version }}"
-                git push origin v${{ steps.environment.outputs.release_version }}
+              env:
+                GH_TOKEN: ${{ secrets.GH_RUNNER_TOKEN }}
 
             - name: Bump Version
               id: bump
+              shell: bash
               run: |
-                CURRENT_VERSION=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')
-
-                # Split the version into components
-                IFS='.' read -r MAJOR MINOR PATCH <<< "$CURRENT_VERSION"
+                current_version=$(grep -E '^version\s*=' Cargo.toml | awk -F\" '{print $2}')
+                # Extract parts without IFS or read
+                IFS='.' read -r major_version minor_version patch_version <<< "${current_version}"
+                echo "Current version $major_version $minor_version $patch_version"
 
                 # Bump the appropriate part
+                echo "Bumping ${{ inputs.release_type }} version"
                 case "${{ inputs.release_type }}" in
                     major)
-                        ((MAJOR++))
-                        MINOR=0
-                        PATCH=0
+                        major_version=$((major_version+1))
+                        minor_version=0
+                        patch_version=0
                         ;;
                     minor)
-                        ((MINOR++))
-                        PATCH=0
+                        minor_version=$((minor_version+1))
+                        patch_version=0
                         ;;
                     patch)
-                        ((PATCH++))
+                        patch_version=$((patch_version+1))
+                        ;;
+                    *)
+                        echo "Invalid release type"
+                        exit 1
                         ;;
                 esac
+                echo "New version: ${major_version}.${minor_version}.${patch_version}"
 
-                BUMP_VERSION="${MAJOR}.${MINOR}.${PATCH}"
-                echo "Updating version from $CURRENT_VERSION to $BUMP_VERSION"
+                bump_version="${major_version}.${minor_version}.${patch_version}"
+                echo "Updating version from $current_version to $bump_version"
 
                 # Update the version in Cargo.toml
                 # capture group 1: version = "
                 # capture group 2: the version number
                 # capture group 3: "
-                sed -i.bak -E "s/(^version\s*=\s*\")([0-9]+\.[0-9]+\.[0-9]+)(\")/\1${BUMP_VERSION}\3/" Cargo.toml
+                sed -i.bak -E "s/(^version = \")([0-9]+\.[0-9]+\.[0-9]+)(\")/\1${bump_version}\3/" Cargo.toml
                 rm Cargo.toml.bak
-                echo "bump_version=${BUMP_VERSION}" >> $GITHUB_OUTPUT
+                nix develop --command cargo generate-lockfile
+                echo "bump_version=${bump_version}" >> $GITHUB_OUTPUT
 
             - uses: EndBug/add-and-commit@v9
               with:
-                  add: 'Cargo.toml'
+                  add: 'Cargo.*'
                   new_branch: main
                   message: 'Bump to version ${{ steps.bump.outputs.bump_version }}'
                   pathspec_error_handling: exitImmediately
