--- a/.github/workflows/build-binaries.yaml
+++ b/.github/workflows/build-binaries.yaml
@@ -49,8 +49,8 @@ jobs:
   binary:
     if: >-
       github.event_name == 'workflow_dispatch' ||
-      (github.event_name == 'pull_request' && github.event.action != 'close' && contains(github.event.pull_request.labels.*.name, format('binary:{0}', inputs.architecture))) ||
-      (github.event_name == 'pull_request' && github.event.action == 'close')
+      (github.event_name == 'pull_request' && github.event.action != 'closed' && contains(github.event.pull_request.labels.*.name, format('binary:{0}', inputs.architecture))) ||
+      (github.event_name == 'pull_request' && github.event.action == 'closed')
     runs-on: ${{ github.event.inputs.runner || inputs.runner }}
     timeout-minutes: 60
     steps:
