formatted yaml files

--- a/.github/workflows/build-binaries.yaml
+++ b/.github/workflows/build-binaries.yaml
@@ -1,10 +1,7 @@
----
 #################################################################################
 # Pipeline to build binaries
 #################################################################################
 name: Build binaries
-
-
 on:
   workflow_call:
     inputs:
@@ -40,17 +37,13 @@ on:
           - armv7l-linux
         required: true
         description: 'Architecture to build for'
-
 concurrency:
   group: ${{ github.ref }}-build-binary-${{ inputs.architecture }}
   cancel-in-progress: true
-
 jobs:
   binary:
     if: >-
-      github.event_name == 'workflow_dispatch' ||
-      (github.event_name == 'pull_request' && github.event.action != 'closed' && contains(github.event.pull_request.labels.*.name, format('binary:{0}', inputs.architecture))) ||
-      (github.event_name == 'pull_request' && github.event.action == 'closed')
+      github.event_name == 'workflow_dispatch' || (github.event_name == 'pull_request' && github.event.action != 'closed' && contains(github.event.pull_request.labels.*.name, format('binary:{0}', inputs.architecture))) || (github.event_name == 'pull_request' && github.event.action == 'closed')
     runs-on: ${{ github.event.inputs.runner || inputs.runner }}
     timeout-minutes: 60
     steps:
@@ -71,18 +64,15 @@ jobs:
           echo "Invocation parameters:"
           echo "branch=${branch}" | tee -a $GITHUB_OUTPUT
           echo "architecture=${architecture}" | tee -a $GITHUB_OUTPUT
-
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
           ref: ${{ steps.vars.outputs.branch }}
-
       - name: Install Nix
         uses: cachix/install-nix-action@v29
         with:
           github_access_token: ${{ secrets.GITHUB_TOKEN }}
           nix_path: nixpkgs=channel:nixos-24.05
-
       - name: Use Nix Cache
         uses: cachix/cachix-action@v15
         with:
@@ -90,7 +80,6 @@ jobs:
           authToken: "${{ secrets.CACHIX_AUTH_TOKEN }}"
         env:
           USER: runner
-
       - name: Get version
         if: inputs.version_type != ''
         id: version
@@ -109,7 +98,6 @@ jobs:
             echo "Invalid version type"
             exit 1
           fi
-
       - name: Build binary ${{ steps.vars.outputs.architecture}}
         run: |
           nix build .#gnosisvpn-${{ steps.vars.outputs.architecture}} -L
@@ -120,21 +108,17 @@ jobs:
             mv binaries/gnosis-vpn-${{ steps.vars.outputs.architecture}} binaries/gnosis-vpn-${{ steps.vars.outputs.architecture}}-${{ steps.version.outputs.binary_version }}
             mv binaries/gnosis-vpn-ctl-${{ steps.vars.outputs.architecture}} binaries/gnosis-vpn-ctl-${{ steps.vars.outputs.architecture}}-${{ steps.version.outputs.binary_version }}
           fi
-
       - name: Setup GCP
         if: steps.version.outputs.publish_type == 'artifact-registry' || steps.version.outputs.publish_type == 'github'
         uses: hoprnet/hopr-workflows/actions/setup-gcp@master
         with:
           google-credentials: ${{ secrets.GOOGLE_HOPRASSOCIATION_CREDENTIALS_REGISTRY }}
           install-sdk: 'true'
-
       - name: Publish Artifact registry
         if: steps.version.outputs.publish_type == 'artifact-registry' || steps.version.outputs.publish_type == 'github'
         run: |
           gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.version.outputs.binary_version }} --package=gnosis-vpn --source=binaries/gnosis-vpn-${{ steps.vars.outputs.architecture}}
           gcloud artifacts generic upload --location=europe-west3 --repository="rust-binaries" --version=${{ steps.version.outputs.binary_version }} --package=gnosis-vpn --source=binaries/gnosis-vpn-ctl-${{ steps.vars.outputs.architecture}}
-
-
       - name: Upload ${{ steps.vars.outputs.architecture }} binaries
         if: steps.version.outputs.publish_type == 'workflow'
         uses: actions/upload-artifact@v4
