--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ name = "gnosis-vpn"
 
 [workspace.dependencies]
 anyhow = "1.0.93"
+exitcode = "1.1.2"
 libp2p-identity = { version = "0.2.10", features = ["ed25519", "peerid"] }
 serde = { version = "1.0.215", features = ["derive"] }
 serde_json = "1.0.133"
