--- a/gnosis-vpn/Cargo.toml
+++ b/gnosis-vpn/Cargo.toml
@@ -7,6 +7,7 @@ edition = { workspace = true }
 
 [dependencies]
 anyhow = { workspace = true }
+exitcode = { workspace = true }
 gnosis-vpn-lib = { workspace = true }
 libp2p-identity = { workspace = true }
 serde = { workspace = true }
