--- a/gnosis-vpn-lib/Cargo.toml
+++ b/gnosis-vpn-lib/Cargo.toml
@@ -12,6 +12,5 @@ serde_json = { workspace = true }
 serde_with = { workspace = true }
 tracing = { workspace = true }
 url = { workspace = true }
-
-thiserror = "1.0.69"
-humantime = "2.1.0"
+thiserror = { workspace = true }
+humantime = { workspace = true }
