--- a/gnosis-vpn/Cargo.toml
+++ b/gnosis-vpn/Cargo.toml
@@ -14,11 +14,10 @@ serde_json = { workspace = true }
 tracing = { workspace = true }
 tracing-subscriber = { workspace = true }
 url = { workspace = true }
-
-anyhow = { version = "1.0", features = ["backtrace"] }
-clap = { version = "4.5.18", features = ["derive"] }
-crossbeam-channel = "0.5.13"
-ctrlc = "3.4.5"
-exponential-backoff = "2.0.0"
-notify = { version = "6.1.1", features = ["serde"] }
-reqwest = { version = "0.12.9", features = ["json", "blocking"] }
+anyhow = { workspace = true }
+clap = { workspace = true }
+crossbeam-channel = { workspace = true }
+ctrlc = { workspace = true }
+exponential-backoff = { workspace = true }
+notify = { workspace = true }
+reqwest = { workspace = true }
