--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,24 +8,26 @@ edition = "2021"
 name = "gnosis-vpn"
 
 [workspace.dependencies]
-exitcode = "1.1.2"
-libp2p-identity = { version = "0.2.10", features = ["ed25519", "peerid"] }
-serde = { version = "1.0.215", features = ["derive"] }
-serde_json = "1.0.133"
-toml = "0.8.19"
-serde_with = { version = "3.11.0", features = ["base64"] }
-tracing = "0.1.41"
-tracing-subscriber = "0.3.18"
-url = { version = "2.5.4", features = ["serde"] }
 anyhow = { version = "1.0", features = ["backtrace"] }
+bincode = { version = "1.3.3" }
 clap = { version = "4.5.18", features = ["derive"] }
 crossbeam-channel = "0.5.13"
 ctrlc = "3.4.5"
+directories = { version = "5.0.1" }
+exitcode = "1.1.2"
 exponential-backoff = "2.0.0"
-notify = { version = "6.1.1", features = ["serde"] }
-thiserror = "1.0.69"
 humantime = "2.1.0"
+libp2p-identity = { version = "0.2.10", features = ["ed25519", "peerid"] }
+notify = { version = "6.1.1", features = ["serde"] }
 reqwest = { version = "0.12.9", features = ["json", "blocking"] }
+serde = { version = "1.0.215", features = ["derive"] }
+serde_json = "1.0.133"
+serde_with = { version = "3.11.0", features = ["base64"] }
+thiserror = "1.0.69"
+toml = "0.8.19"
+tracing = "0.1.41"
+tracing-subscriber = "0.3.18"
+url = { version = "2.5.4", features = ["serde"] }
 # use exclusively because it supports command chaining
 bpaf = { version = "0.9.15", features = ["autocomplete", "derive"] }
 
