--- a/gnosis-vpn-lib/Cargo.toml
+++ b/gnosis-vpn-lib/Cargo.toml
@@ -6,6 +6,8 @@ edition = { workspace = true }
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+bincode = {workspace = true}
+directories = { workspace = true }
 libp2p-identity = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
